{feat} - 유저 알람 활성화 api 구현 \n #428
