# src/docs/swagger.yaml
@@ -84,6 +84,11 @@ definitions:
       size:
         type: integer
     type: object
+  request.ReqAlertUsers:
+    properties:
+      alert:
+        type: boolean
+    type: object
   request.ReqCreate:
     properties:
       maxCount:
@@ -2135,6 +2140,44 @@ paths:
           description: Internal Server Error
           schema: {}
       summary: 유저 정보 가져오기
+      tags:
+      - user
+  /v0.1/users/alert:
+    put:
+      description: |-
+        ■ errCode with 400
+        PARAM_BAD : 파라미터 오류
+        USER_NOT_FOUND : 유저를 찾을 수 없음
+
+        ■ errCode with 500
+        INTERNAL_SERVER : 내부 로직 처리 실패
+        INTERNAL_DB : DB 처리 실패
+      parameters:
+      - description: accessToken
+        in: header
+        name: tkn
+        required: true
+        type: string
+      - description: 활성화 (true) / 비활성화 (false)
+        in: body
+        name: json
+        required: true
+        schema:
+          $ref: '#/definitions/request.ReqAlertUsers'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: 유저 알람 활성화/비활성화 수정하기
       tags:
       - user
   /v0.1/users/profiles:
