# src/features/users/model/request/alertUsers.go
@@ -1,0 +1,5 @@
+package request
+
+type ReqAlertUsers struct {
+	Alert bool `json:"alert"`
+}
